cluster/gitops/media/bazarr/openarc/netpol.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: openarc
specs:
  # Model + config ship inside a k8s image volume; the runtime pod has no
  # outbound traffic except DNS.
  - description: openarc
    endpointSelector:
      matchLabels:
        app.kubernetes.io/name: openarc
        app.kubernetes.io/controller: openarc
        app.kubernetes.io/instance: openarc
    egress:
      # FastAPI internals occasionally do hostname lookups even with no
      # configured outbound traffic; deny would stall startup.
      - toEndpoints:
          - matchLabels:
              io.kubernetes.pod.namespace: networking
              endpoints.netpols.home.arpa/cluster-dns: "true"
        toPorts:
          - ports:
              - port: "53"
                protocol: UDP
              - port: "53"
                protocol: TCP
            rules:
              dns:
                - matchPattern: "*"
    ingress:
      - fromEntities:
          - host
        toPorts: &web_ports
          - ports:
              - port: "8000"
                protocol: TCP
      # Bazarr is currently the only consumer.
      - fromEndpoints:
          - matchLabels:
              app.kubernetes.io/name: bazarr
              app.kubernetes.io/controller: bazarr
              app.kubernetes.io/instance: bazarr
        toPorts: *web_ports
